--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/react": "1.0.6",
     "@tremor/react": "^3.0.1",
     "autoprefixer": "^10.4.14",
+    "i18next-browser-languagedetector": "^7.0.2",
+    "i18next-http-backend": "^2.2.1",
     "postcss": "^8.4.24",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +29,8 @@
     "eslint": "^8.38.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "i18next": "^22.5.1",
+    "react-i18next": "^12.3.1",
     "typescript": "^5.0.2",
     "vite": "^4.3.9"
   }
